Closed Bug 10939 Opened 25 years ago Closed 25 years ago

<INPUT TYPE=IMAGE> element is not transparent

Categories

(Core :: Layout, defect, P3)

x86
Other
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: MatsPalmgren_bugz, Assigned: pollmann)

References

Details

(Keywords: testcase, Whiteboard: [TESTCASE])

Attachments

(1 file)

Summary says it all.
I'm adding an attachment, hang on...
Whiteboard: [TESTCASE]
Attached file testcase
Assignee: troy → pollmann
So it seems the form is painting "white". This looks like Vidur's doing, but
since you handle forms I'm assigning it to you. Looking at ua.css it seems the
form should be transparent, because there is no explicit background color.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Target Milestone: M15 → M9
Just checked in a fix.
Status: RESOLVED → VERIFIED
With the August 11th build, this problem is fixed.
Status: VERIFIED → REOPENED
It's broken again.
*** Bug 24168 has been marked as a duplicate of this bug. ***
Resolution: FIXED → ---
Clearing FIXED resolution due to reopen.
Target Milestone: M9 → M16
Moving to M16, probably won't get a chance to look at this any time soon.
Status: REOPENED → ASSIGNED
Summary: <FORM> element is not transparent → <INPUT TYPE=IMAGE> element is not transparent
This is a problem only for <INPUT TYPE=IMAGE>, as I've tried other form elements
and none seem to have the problem.
My original fix for this bug was to add this line when the view was created:

    view->SetContentTransparency(PR_TRUE);

(revision 3.29 of layout/html/forms/nsImageControlFrame.cpp)

The line is still there, but seems to no longer have any effect, I don't know
why this might be?
Bulk moving [testcase] code to new testcase keyword. Sorry for the spam!
Keywords: testcase
*** Bug 24492 has been marked as a duplicate of this bug. ***
This is due to a recent change in html.css and I'll check in the fix either
tonight or tomorrow!  :)
Fix checked in.
Updating mileston/resolution.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago25 years ago
Resolution: --- → FIXED
Target Milestone: M16 → M14
Fixed in the Jan 31 build.
Status: RESOLVED → VERIFIED
*** Bug 26138 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: