Bug 10939: Make image input element transparent